--- a/Css/responsive.css
+++ b/Css/responsive.css
@@ -3,8 +3,8 @@
 
 @media (min-width: 1200px) {
   .container {
-    margin-left: 9.375rem;
-    margin-right: 9.375rem;
+    margin-left: 7rem;
+    margin-right: 7rem;
   }
   .section {
     margin-top: 10rem 0;
@@ -30,7 +30,6 @@
   }
 
   .info-cont {
- 
     top: 5rem;
     display: inline-block;
   }
@@ -62,48 +61,28 @@
     width: 30rem;
   }
 
-  .cards.grid {
+  .cards {
     display: flex;
-    justify-content: space-between;
-    gap: 1rem;
+justify-content: center;
+    
+  }
+  .cards .card {
+    width: 22rem;
+    height: 30rem;
+    border-radius: 1.5rem;
+    gap: 2rem;
   }
 
+  #service h2, #projects h2 {
+    font: 700 2rem 'DM sans', sans-serif;
+    text-align: center;
+  }
   #service {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
       linear-gradient(180deg, rgba(47, 7, 59, 0.83) 1.37%, #2f073b 81.19%);
   }
 
-  .card {
-    background: #4e2d58;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 0.25rem 0.25rem 0 0;
-    text-align: center;
-  }
-
-  .card {
-    width: 22rem;
-    height: 30rem;
-    gap: 2rem;
-  }
-
-  .card i {
-    display: block;
-    margin-bottom: 1.5rem;
-    font-size: 10rem;
-  }
-
-  .card h3 {
-    font-size: 1.5rem;
-    margin-bottom: 0.75rem;
-  }
-
   /*=========================Projects=========================*/
-
-  .cards .card {
-    width: 22rem;
-    height: 30rem;
-    gap: 2rem;
-  }
 
   #projects .card i {
     color: white;
@@ -126,6 +105,9 @@
   /*======================Skills======================*/
 
   #skills {
+    display: flex;
+    justify-content:  space-between;
+
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
       linear-gradient(180deg, rgba(47, 7, 59, 0.83) 1.37%, #2f073b 81.19%);
     display: flex;
@@ -136,8 +118,9 @@
   }
 
   #skills img {
-    width: 12rem;
-    height: 10rem;
+    width: 24rem;
+    height: 24rem;
+    margin-right: 7rem;
   }
   #skills .skills2 {
     margin-top: 2rem;
@@ -146,6 +129,8 @@
   main {
     margin-top: var(--header-height);
   }
+
+
 }
 /*large devices: 1023 > */
 
@@ -155,11 +140,36 @@
 /*large devices: 992 > */
 
 @media (min-width: 992px) {
+
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul li a.title {
+    font: 400 1.125rem 'DM sans', sans-serif;
+    color: var(--text-color);
+  }
+
+  nav .icon-menu {
+    display: none;
+  }
+
+ .aboutme{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .aboutme img{
+    display: block;
+  }
+  
 }
 
 /*medium devices: 767 > */
-
-@media (min-width: 767px) {
-}
-
-/*Responsivo */
